--- a/password-generator.html
+++ b/password-generator.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Generator</title>
     <link rel="stylesheet" href="assets/css/index.css" />
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/index.js"></script>
 </head>
 <body>
     <div class="container">
